2006-03-17  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-playback-0.10.c: Create a custom audio sink that contains
	a tee element; plugins can request and connect to new source pads from
	the tee to stream audio to elements in their control without breaking
	the normal flow of data to the sound card

	* src/Banshee.MediaEngine/Gstreamer/GstPlayerEngine.cs: Implement 
	PlayerEngine.GetBaseElements and return an IntPtr array containing the
	playbin, audiotee, and audiobin elements plugins can use to extend the
	pipeline

	* src/Banshee.Base/MediaEngine/PlayerEngine.cs: Removed SetProperty; 
	added GetBaseElements that returns an IntPtr array

2006-03-17  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/AudioCd/AudioCdDisk.cs (Eject): Stop playback if 
	the playing stream is a track on the disk that is about to be ejected

	* libbanshee/gst-playback-0.10.c (gst_playback_open): Reset the pipeline
	to READY state if not already there

2006-03-17  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-playback-0.10.c: Perform a manual seek on an audio CD
	if the current playing stream is from the same CD; this eliminates the
	need to set uri on playbin, so the pipeline does not need to re-link
	and the CDDA device does not need to be closed and opened again

2006-03-16  Aaron Bockover  <aaron@abock.org>

	* configure.ac: Do an explicit -x test for gst-inspect before running
	an element check

2006-03-16  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project

	* libbanshee/Makefile.am: Added gst-tagger.[ch]

	* libbanshee/gst-playback-0.10.c: Support parsing tags from incoming
	audio stream and send off to consuming API

	* libbanshee/gst-tagger.c:
	* libbanshee/gst-tagger.h: Common API for handling tag reading/writing
	from GStreamer audio streams

	* src/PlayerInterface.cs: Update the metadata header when the
	PlayerEngineEvent.TrackInfoUpdated event is raised

	* src/TrackProperties.cs:
	* src/Banshee.Base/Globals.cs: